--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^7.1.0",
+		"@fortawesome/free-solid-svg-icons": "^7.1.0",
+		"@fortawesome/react-fontawesome": "^3.1.1",
 		"@opennextjs/cloudflare": "^1.14.4",
 		"@prisma/adapter-better-sqlite3": "^7.2.0",
 		"@prisma/client": "^7.2.0",
