--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react": "19.1.4",
 		"react-dom": "19.1.4",
 		"resend": "^6.6.0",
+		"sonner": "^2.0.7",
 		"zod": "^4.2.1"
 	},
 	"devDependencies": {
