--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@prisma/adapter-better-sqlite3": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"better-sqlite3": "^12.5.0",
+		"moment": "^2.30.1",
 		"next": "15.5.9",
 		"prisma": "^7.2.0",
 		"react": "19.1.4",
