--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"@opennextjs/cloudflare": "^1.14.4",
 		"@prisma/adapter-better-sqlite3": "^7.2.0",
 		"@prisma/client": "^7.2.0",
+		"@types/geojson": "^7946.0.16",
 		"better-sqlite3": "^12.5.0",
+		"geojson": "^0.5.0",
 		"moment": "^2.30.1",
 		"next": "15.5.9",
 		"prisma": "^7.2.0",
