--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 		"@fortawesome/fontawesome-svg-core": "^7.1.0",
 		"@fortawesome/free-solid-svg-icons": "^7.1.0",
 		"@fortawesome/react-fontawesome": "^3.1.1",
-		"@opennextjs/cloudflare": "^1.14.4",
+		"@opennextjs/cloudflare": "^1.14.8",
 		"@prisma/adapter-better-sqlite3": "^7.2.0",
+		"@prisma/adapter-d1": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@types/geojson": "^7946.0.16",
 		"better-sqlite3": "^12.5.0",
+		"esbuild": "^0.27.2",
 		"geojson": "^0.5.0",
 		"moment": "^2.30.1",
 		"next": "15.5.9",
@@ -42,5 +44,9 @@
 		"tailwindcss": "^4",
 		"typescript": "^5",
 		"wrangler": "^4.54.0"
+	},
+	"optionalDependencies": {
+		"@ast-grep/napi-linux-arm64-gnu": "^0.40.4",
+		"@ast-grep/napi-linux-x64-gnu": "^0.40.4"
 	}
 }
