--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"esbuild": "^0.27.2",
 		"geojson": "^0.5.0",
 		"moment": "^2.30.1",
-		"next": "15.5.9",
+		"next": "^16.1.1",
 		"prisma": "^7.2.0",
 		"react": "19.1.4",
 		"react-dom": "19.1.4",
@@ -44,9 +44,5 @@
 		"tailwindcss": "^4",
 		"typescript": "^5",
 		"wrangler": "^4.54.0"
-	},
-	"optionalDependencies": {
-		"@ast-grep/napi-linux-arm64-gnu": "^0.40.4",
-		"@ast-grep/napi-linux-x64-gnu": "^0.40.4"
 	}
 }
