--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@prisma/adapter-d1": "^7.2.0",
 		"@prisma/client": "^7.2.0",
 		"@types/geojson": "^7946.0.16",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.45.1",
 		"esbuild": "^0.27.2",
 		"geojson": "^0.5.0",
 		"moment": "^2.30.1",
@@ -37,9 +39,11 @@
 		"@types/node": "^20.19.27",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.8",
 		"eslint": "^9",
 		"eslint-config-next": "15.4.6",
 		"tailwindcss": "^4",
+		"tsx": "^4.21.0",
 		"typescript": "^5",
 		"wrangler": "^4.54.0"
 	}
