--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
 	},
 	"dependencies": {
+		"@eslint/compat": "^2.0.0",
 		"@fortawesome/fontawesome-svg-core": "^7.1.0",
 		"@fortawesome/free-solid-svg-icons": "^7.1.0",
 		"@fortawesome/react-fontawesome": "^3.1.1",
+		"@libsql/client": "^0.17.0",
 		"@opennextjs/cloudflare": "^1.14.8",
 		"@types/geojson": "^7946.0.16",
 		"dotenv": "^17.2.3",
