--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -37,6 +37,7 @@
 	},
 	"d1_databases": [
 		{
+			"remote": true,
 			"binding": "weathercam_guessr_prod",
 			"database_name": "weathercam-guessr-prod",
 			"database_id": "d86a089a-732a-4241-a6c1-d51854714665"
