--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
 		"drizzle-orm": "^0.45.1",
 		"esbuild": "^0.27.2",
 		"geojson": "^0.5.0",
+		"maplibre-gl": "^5.16.0",
 		"moment": "^2.30.1",
 		"next": "^15.5.9",
 		"react": "19.1.4",
 		"react-dom": "19.1.4",
+		"react-map-gl": "^8.1.0",
 		"resend": "^6.6.0",
 		"sonner": "^2.0.7",
 		"zod": "^4.2.1"
