--- a/package.json
+++ b/package.json
@@ -20,23 +20,26 @@
 		"@libsql/client": "^0.17.0",
 		"@opennextjs/cloudflare": "^1.14.8",
 		"@types/geojson": "^7946.0.16",
+		"cookies-next": "^6.1.1",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.45.1",
 		"esbuild": "^0.27.2",
 		"geojson": "^0.5.0",
+		"js-cookie": "^3.0.5",
 		"maplibre-gl": "^5.16.0",
 		"moment": "^2.30.1",
 		"next": "^15.5.9",
 		"react": "19.1.4",
 		"react-dom": "19.1.4",
+		"react-hot-toast": "^2.6.0",
 		"react-map-gl": "^8.1.0",
 		"resend": "^6.6.0",
-		"sonner": "^2.0.7",
 		"zod": "^4.2.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20.19.27",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
