--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-dom": "19.1.4",
 		"react-hot-toast": "^2.6.0",
 		"react-map-gl": "^8.1.0",
+		"react-zoom-pan-pinch": "^3.7.0",
 		"resend": "^6.6.0",
 		"zod": "^4.2.1"
 	},
