--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"moment": "^2.30.1",
 		"next": "^15.5.9",
 		"react": "19.1.4",
+		"react-countup": "^6.5.3",
 		"react-dom": "19.1.4",
 		"react-hot-toast": "^2.6.0",
 		"react-map-gl": "^8.1.0",
