--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -42,7 +42,10 @@
 			"database_name": "weathercam-guessr-prod",
 			"database_id": "d86a089a-732a-4241-a6c1-d51854714665"
 		}
-	]
+	],
+	"triggers": {
+		"crons": ["* * * * *"]
+	}
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
