attemted to fix worker job

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -44,7 +44,7 @@
 		}
 	],
 	"triggers": {
-		"crons": ["0 0 * * *", "22 * * * *"]
+		"crons": ["0 0 * * *", "55 * * * *"] // 0 2 * * 1
 	}
 	/**
 	 * Smart Placement
