final fix, also migrated to a batch job (better thn running 2000 individual sql queries)

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -45,7 +45,7 @@
 	],
 	"r2_buckets": [
 		{
-			"binding": "foobucket", // <~ valid JavaScript variable name
+			"binding": "foobucket",
 			"bucket_name": "foobucket",
 			"remote": true
 		}
