--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"geojson": "^0.5.0",
 		"js-cookie": "^3.0.5",
 		"maplibre-gl": "^5.16.0",
+		"minisearch": "^7.2.0",
 		"moment": "^2.30.1",
 		"next": "^15.5.9",
 		"react": "19.1.4",
